# cv

./: .gitignore  .latexmkrc  Makefile  README.md  awesome-cv.cls
.agents/skills/latex-document/: README.md  pyproject.toml  setup.sh
.agents/skills/latex-document/scripts/: csv_to_latex.py  generate_chart.py  mail_merge.py  mermaid_to_image.sh  pdf_check_form.py  pdf_extract_fields.py  pdf_fill_annotations.py  pdf_fill_form.py  pdf_validate_boxes.py
.github/workflows/: main.yml
cv/: main.tex  publications.bib
cv/contents/: education.tex  experience.tex  extracurricular.tex  grants.tex  honors.tex  presentation.tex  publications.tex  students.tex
research-statement/: main.tex  references.bib
research-statement/contents/: conclusion.tex  deep-learning.tex  future.tex  introduction.tex  inverse.tex  kinetic.tex  spectral.tex
src/: cv.tex
teaching-statement/: main.fdb_latexmk  main.tex  teachings.xlsx
