[project]
name = "latex-document-skill"
version = "0.1.0"
description = "Python dependencies for the LaTeX document skill"
requires-python = ">=3.9"
dependencies = [
    # Chart generation (scripts/generate_chart.py)
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    # CSV-to-LaTeX conversion (scripts/csv_to_latex.py) + chart CSV input
    "pandas>=1.3.0",
    # Mail merge template rendering (scripts/mail_merge.py)
    "jinja2>=3.0.0",
]
